# Module_6

./: .env_example  .env_template  .gitignore  README.md  app.py  catalog.html  category.html  contacts.html  index.html  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  menu.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: categories.json  groups.json  products.json
catalog/management/commands/: load_test_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published.py  0002_category_product.py  0003_product_owner.py
catalog/templates/: base.html
catalog/templates/catalog/: catalog.html  category.html  contacts.html  index.html  menu.html  messages.html  product.html  product_form.html
config/: settings.py  urls.py
mailing_service/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  urls.py  views.py
mailings/migrations/: 0001_initial.py  0002_client_owner_mailing_owner_mailingattempt_owner_and_more.py  0003_alter_client_options_alter_mailing_options_and_more.py
mailings/templates/mailings/: attempt_list.html  base.html  client_form.html  (+10 more)
templates/catalog/: catalog.html  category.html  contacts.html  index.html  messages.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/fixtures/: groups.json
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py
(+15 files in other folders)
